Bug fixes plus new lookAt plugin
Z values could be worked out incorrectly when partly off-screen